CA1/FunctionCraft/gen/main/grammar/FunctionCraftParser.java
// Generated from E:/PLC/CA1/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, FUNCTION=5, END_OF_SCOPE=6, LAMBDA=7, 
		MAIN=8, RETURN=9, IF=10, ELSEIF=11, ELSE=12, CHOP=13, CHOMP=14, PUSH=15, 
		PUTS=16, METHOD=17, LENGTH=18, PATTERN=19, MATCH=20, NEXT=21, BREAK=22, 
		LOOP=23, DO=24, FOR=25, IN=26, FLOAT_VAL=27, INT_VAL=28, TRUE=29, FALSE=30, 
		STRING_VAL=31, LPAR=32, RPAR=33, LBRACKET=34, RBRACKET=35, PLUS=36, MINUS=37, 
		MULT=38, DIV=39, MOD=40, PLUS_PLUS=41, MINUS_MINUS=42, GEQ=43, LEQ=44, 
		GTR=45, LES=46, EQL=47, NEQ=48, AND=49, OR=50, NOT=51, ASSIGN=52, PLUS_ASSIGN=53, 
		MINUS_ASSIGN=54, MULT_ASSIGN=55, DIV_ASSIGN=56, MOD_ASSIGN=57, APPEND=58, 
		LBRACE=59, RBRACE=60, COMMA=61, SEMICOLON=62, DOT=63, COLON=64, IDENTIFIER=65, 
		SINGLE_LINE_COMMENT=66, MULTY_LINE_COMMENT=67, WS=68;
	public static final int
		RULE_program = 0, RULE_body = 1, RULE_main = 2, RULE_declerationArg = 3, 
		RULE_defaultArg = 4, RULE_normalArgs = 5, RULE_defaultArgs = 6, RULE_declerationArgs = 7, 
		RULE_patternDeclaration = 8, RULE_pattern = 9, RULE_functionDecleration = 10, 
		RULE_function = 11, RULE_lambdaFunctionDecleration = 12, RULE_lambdaFunction = 13, 
		RULE_inputArgs = 14, RULE_assignmentOperators = 15, RULE_logicalOperator = 16, 
		RULE_directValue = 17, RULE_intVal = 18, RULE_floatVal = 19, RULE_booleanVal = 20, 
		RULE_list = 21, RULE_listAccess = 22, RULE_condition = 23, RULE_functionCall = 24, 
		RULE_patternCall = 25, RULE_lamdaCall = 26, RULE_functionPointer = 27, 
		RULE_builtIn = 28, RULE_chop = 29, RULE_chomp = 30, RULE_len = 31, RULE_puts = 32, 
		RULE_push = 33, RULE_expression = 34, RULE_exprAppend = 35, RULE_exprAppend_ = 36, 
		RULE_exprOr = 37, RULE_exprOr_ = 38, RULE_exprAnd = 39, RULE_exprAnd_ = 40, 
		RULE_exprEq = 41, RULE_exprEq_ = 42, RULE_exprCmp = 43, RULE_exprCmp_ = 44, 
		RULE_exprAddSub = 45, RULE_exprAddSub_ = 46, RULE_exprMultDiv = 47, RULE_exprMultDiv_ = 48, 
		RULE_exprUnary = 49, RULE_exprUnaryPostfix = 50, RULE_exprValues = 51, 
		RULE_statement = 52, RULE_returnStatement = 53, RULE_assignmentStatement = 54, 
		RULE_ifStatement = 55, RULE_ifBlock = 56, RULE_elseifBlock = 57, RULE_elseBlock = 58, 
		RULE_loopDo = 59, RULE_forLoop = 60, RULE_range = 61, RULE_loopBody = 62, 
		RULE_ifLoopStatement = 63, RULE_ifLoopBlock = 64, RULE_elseifLoopBlock = 65, 
		RULE_elseLoopBlock = 66, RULE_next = 67, RULE_nextif = 68, RULE_break = 69, 
		RULE_breakif = 70, RULE_comment = 71;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "body", "main", "declerationArg", "defaultArg", "normalArgs", 
			"defaultArgs", "declerationArgs", "patternDeclaration", "pattern", "functionDecleration", 
			"function", "lambdaFunctionDecleration", "lambdaFunction", "inputArgs", 
			"assignmentOperators", "logicalOperator", "directValue", "intVal", "floatVal", 
			"booleanVal", "list", "listAccess", "condition", "functionCall", "patternCall", 
			"lamdaCall", "functionPointer", "builtIn", "chop", "chomp", "len", "puts", 
			"push", "expression", "exprAppend", "exprAppend_", "exprOr", "exprOr_", 
			"exprAnd", "exprAnd_", "exprEq", "exprEq_", "exprCmp", "exprCmp_", "exprAddSub", 
			"exprAddSub_", "exprMultDiv", "exprMultDiv_", "exprUnary", "exprUnaryPostfix", 
			"exprValues", "statement", "returnStatement", "assignmentStatement", 
			"ifStatement", "ifBlock", "elseifBlock", "elseBlock", "loopDo", "forLoop", 
			"range", "loopBody", "ifLoopStatement", "ifLoopBlock", "elseifLoopBlock", 
			"elseLoopBlock", "next", "nextif", "break", "breakif", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\\r\\n    |'", "'\\r\\n\\t|'", "'\\n    |'", "'\\n\\t|'", "'def'", 
			"'end'", "'->'", "'main'", "'return'", "'if'", "'elseif'", "'else'", 
			"'chop'", "'chomp'", "'push'", "'puts'", "'method'", "'len'", "'pattern'", 
			"'match'", "'next'", "'break'", "'loop'", "'do'", "'for'", "'in'", null, 
			null, "'true'", "'false'", null, "'('", "')'", "'['", "']'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'++'", "'--'", "'>='", "'<='", "'>'", "'<'", "'=='", 
			"'!='", "'&&'", "'||'", "'!'", "'='", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'<<'", "'{'", "'}'", "','", "';'", "'.'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "FUNCTION", "END_OF_SCOPE", "LAMBDA", "MAIN", 
			"RETURN", "IF", "ELSEIF", "ELSE", "CHOP", "CHOMP", "PUSH", "PUTS", "METHOD", 
			"LENGTH", "PATTERN", "MATCH", "NEXT", "BREAK", "LOOP", "DO", "FOR", "IN", 
			"FLOAT_VAL", "INT_VAL", "TRUE", "FALSE", "STRING_VAL", "LPAR", "RPAR", 
			"LBRACKET", "RBRACKET", "PLUS", "MINUS", "MULT", "DIV", "MOD", "PLUS_PLUS", 
			"MINUS_MINUS", "GEQ", "LEQ", "GTR", "LES", "EQL", "NEQ", "AND", "OR", 
			"NOT", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", 
			"MOD_ASSIGN", "APPEND", "LBRACE", "RBRACE", "COMMA", "SEMICOLON", "DOT", 
			"COLON", "IDENTIFIER", "SINGLE_LINE_COMMENT", "MULTY_LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(147);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case FUNCTION:
						{
						setState(144);
						function();
						}
						break;
					case SINGLE_LINE_COMMENT:
					case MULTY_LINE_COMMENT:
						{
						setState(145);
						comment();
						}
						break;
					case PATTERN:
						{
						setState(146);
						pattern();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(152);
			main();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SINGLE_LINE_COMMENT || _la==MULTY_LINE_COMMENT) {
				{
				{
				setState(153);
				comment();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 7)) & ~0x3f) == 0 && ((1L << (_la - 7)) & 2017630227059249097L) != 0)) {
				{
				setState(161);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LAMBDA:
				case IF:
				case CHOP:
				case CHOMP:
				case PUSH:
				case PUTS:
				case METHOD:
				case LENGTH:
				case LOOP:
				case FOR:
				case FLOAT_VAL:
				case INT_VAL:
				case TRUE:
				case FALSE:
				case STRING_VAL:
				case LPAR:
				case LBRACKET:
				case PLUS:
				case MINUS:
				case NOT:
				case IDENTIFIER:
					{
					setState(159);
					statement();
					}
					break;
				case SINGLE_LINE_COMMENT:
				case MULTY_LINE_COMMENT:
					{
					setState(160);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(166);
				returnStatement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(FunctionCraftParser.FUNCTION, 0); }
		public TerminalNode MAIN() { return getToken(FunctionCraftParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode END_OF_SCOPE() { return getToken(FunctionCraftParser.END_OF_SCOPE, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(FUNCTION);
			setState(170);
			match(MAIN);
			setState(171);
			match(LPAR);
			setState(172);
			match(RPAR);
			System.out.println("MAIN");
			setState(174);
			body();
			setState(175);
			match(END_OF_SCOPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclerationArgContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FunctionCraftParser.IDENTIFIER, 0); }
		public DeclerationArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declerationArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterDeclerationArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitDeclerationArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitDeclerationArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclerationArgContext declerationArg() throws RecognitionException {
		DeclerationArgContext _localctx = new DeclerationArgContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declerationArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefaultArgContext extends ParserRuleContext {
		public DeclerationArgContext declerationArg() {
			return getRuleContext(DeclerationArgContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(FunctionCraftParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefaultArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterDefaultArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitDefaultArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitDefaultArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefaultArgContext defaultArg() throws RecognitionException {
		DefaultArgContext _localctx = new DefaultArgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defaultArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			declerationArg();
			setState(180);
			match(ASSIGN);
			setState(181);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NormalArgsContext extends ParserRuleContext {
		public List<DeclerationArgContext> declerationArg() {
			return getRuleContexts(DeclerationArgContext.class);
		}
		public DeclerationArgContext declerationArg(int i) {
			return getRuleContext(DeclerationArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public NormalArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normalArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterNormalArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitNormalArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitNormalArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NormalArgsContext normalArgs() throws RecognitionException {
		NormalArgsContext _localctx = new NormalArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_normalArgs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(188);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(183);
					declerationArg();
					setState(184);
					match(COMMA);
					}
					} 
				}
				setState(190);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(191);
			declerationArg();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefaultArgsContext extends ParserRuleContext {
		public List<DefaultArgContext> defaultArg() {
			return getRuleContexts(DefaultArgContext.class);
		}
		public DefaultArgContext defaultArg(int i) {
			return getRuleContext(DefaultArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public DefaultArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defaultArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterDefaultArgs(this);
		}
		@Override
